Fixes backported to 1.3 branch:
4896 - Kupu interface invisible if color changed
4911 - Kupu creates incorrect relative link in new page
4801 - Kupu Links: search for private objects fails
4622 - It's not possible to insert link to local folder using kupu
4873 - Kupu removes u-tag

--- a/common/kupudrawerstyles.css
+++ b/common/kupudrawerstyles.css
@@ -22,6 +22,7 @@
   height: auto;
   width: 640px;
   z-index: 2;
+  color: black;
 }
 
 .kupu-tabledrawer {
